--- a/Designer/Interface/Data/Data.xaml
+++ b/Designer/Interface/Data/Data.xaml
@@ -7,7 +7,6 @@
 	xmlns:Projects="clr-namespace:WCFArchitect.Projects;assembly=WCFArchitect.Projects"
 	xmlns:Docs="clr-namespace:WCFArchitect.Interface.Documentation"
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
-	Margin="5"
 	d:DesignHeight="950" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" >
 	<ContentControl.Resources>
 		<ResourceDictionary>
@@ -27,10 +26,10 @@
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
 			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
-			<RowDefinition Height="Auto" />
 			<RowDefinition Height="*" />
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="5*" />
 		</Grid.RowDefinitions>
 		<Label Grid.Row="0" Margin="5" Padding="10,2,0,2" Content="Server Type:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="90" />
 		<Data:TypeEditor OpenType="{Binding Path=OpenType}" x:Name="ServerTypeEditor" SupportInheritedTypes="True" SupportKnownTypes="True" Grid.Row="0" Margin="100,0,0,0" />
@@ -38,9 +37,9 @@
 		<Data:TypeEditor OpenType="{Binding Path=OpenType.ClientType}" x:Name="ClientTypeEditor" SupportInheritedTypes="True" SupportKnownTypes="True" Grid.Row="1" Margin="100,0,0,0" />
 		<ToggleButton Grid.Row="2" Margin="5" IsChecked="{Binding Path=OpenType.HasXAMLType}" Content="XAML Type:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="90" />
 		<Data:TypeEditor OpenType="{Binding Path=OpenType.XAMLType}" x:Name="XAMLTypeEditor" CanSetType="False" SupportInheritedTypes="True" Grid.Row="2" Margin="100,0,0,0" />
-		<Docs:Class x:Name="Docs" Grid.Row="3" Margin="0,5" Documentation="{Binding Path=OpenType.Documentation}" />
+		<Docs:Class x:Name="Docs" Grid.Row="3" Margin="5" Documentation="{Binding Path=OpenType.Documentation}" />
 		<Label Grid.Row="4" Content="Members" FontSize="14pt" Margin="0,10,0,0" />
-		<Label Grid.Row="5" Margin="-4,5,0,5" Padding="8,2,0,2" Content="Add Member:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
+		<Label Grid.Row="5" Margin="-4,5,0,5" Padding="10,2,0,2" Content="Add Member:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="100" />
 		<Data:TypeSelector Project="{Binding OpenType}" x:Name="AddMemberType" LabelText="Type" Grid.Row="5" Margin="105,5,0,5" HorizontalAlignment="Left" Width="375" Selected="AddMemberType_Selected" ValidationChanged="AddMemberType_ValidationChanged" />
 		<pc:TextBox x:Name="AddMemberName" LabelText="Name" Grid.Row="5" Margin="490,5,105,5" Validate="AddMemberName_Validate" TextChanged="AddMemberName_TextChanged" KeyUp="AddMemberName_KeyUp" />
 		<Button x:Name="AddMember" Grid.Row="5" Margin="5" Content="Add" HorizontalAlignment="Right" Width="90" IsEnabled="False" Click="AddMember_Click" />
@@ -119,7 +118,7 @@
 					</DataTemplate>
 				</ListBox.ItemTemplate>
 			</ListBox>
-			<ContentPresenter Grid.Column="1" Content="{Binding Path=ActiveElement}" />
+			<ContentPresenter Grid.Column="1" Content="{Binding Path=ActiveElement}" Margin="5,0" />
 		</Grid>
 	</Grid>
 </ContentControl>
