--- a/Designer/Interface/Data/DataElement.xaml
+++ b/Designer/Interface/Data/DataElement.xaml
@@ -141,5 +141,5 @@
 		<pc:TextBox Name="AttachedTargetTypes" Grid.Row="1" Grid.Column="1" Margin="5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedTargetTypes}" ToolTip="Please enter the Target Types as a common seperated list." />
 		<pc:TextBox Name="AttachedAttributeTypes" Grid.Row="1" Grid.Column="2" Margin="5,5,0,5" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" Text="{Binding Path=Element.AttachedAttributeTypes}" ToolTip="Please enter the Attribute Types as a common seperated list." />
 	</Grid>
-	<Docs:Standard x:Name="Docs" Grid.Row="6" Margin="0,5,0,0" IsProperty="True" Documentation="{Binding Path=Element.Documentation}" />
+	<Docs:Standard x:Name="Docs" Grid.Row="6" Margin="0,5,0,0" IsProperty="True" MinHeight="250" Documentation="{Binding Path=Element.Documentation}" />
 </Grid>
