--- a/Designer/Interface/Service/Method.xaml
+++ b/Designer/Interface/Service/Method.xaml
@@ -35,21 +35,24 @@
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="*"/>
 			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="*"/>
-			<ColumnDefinition Width="2*"/>
+			<ColumnDefinition Width="1.5*"/>
 		</Grid.ColumnDefinitions>
-		<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="0,5,5,5" Grid.Column="0" />
-		<ToggleButton Content="Initiating" IsChecked="{Binding Path=MethodData.IsInitiating}" Margin="5" Grid.Column="1" Checked="Initiating_Checked" />
-		<ToggleButton Content="Terminating" IsChecked="{Binding Path=MethodData.IsTerminating}" Margin="5" Grid.Column="2" Checked="Terminating_Checked" />
-		<ToggleButton Content="Async" IsChecked="{Binding Path=MethodData.UseAsyncPattern}" Margin="5" Grid.Column="3" />
-		<ToggleButton Content="Await" IsChecked="{Binding Path=MethodData.UseAwaitPattern}" Margin="5" Grid.Column="4" />
-		<Label Content="Protection:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="5" />
-		<ComboBox Height="23" Margin="80,5,0,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="5" >
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<ToggleButton Content="One Way" IsChecked="{Binding Path=MethodData.IsOneWay}" Margin="0,5,5,5" Grid.Column="0" Grid.Row="0" />
+		<ToggleButton Content="Initiating" IsChecked="{Binding Path=MethodData.IsInitiating}" Margin="5" Grid.Column="1" Grid.Row="0" Checked="Initiating_Checked" />
+		<ToggleButton Content="Terminating" IsChecked="{Binding Path=MethodData.IsTerminating}" Margin="5" Grid.Column="2" Grid.Row="0" Checked="Terminating_Checked" />
+		<Label Content="Protection:" Height="Auto" HorizontalAlignment="Left" VerticalContentAlignment="Center" Grid.Column="3" Grid.Row="0" />
+		<ComboBox Height="23" Margin="80,5,0,5" SelectedIndex="{Binding Path=MethodData.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="3" Grid.Row="0" >
 			<ComboBoxItem Content="None" />
 			<ComboBoxItem Content="Sign" />
 			<ComboBoxItem Content="Encrypt and Sign" />
 		</ComboBox>
+		<ToggleButton Content="Synchronous" IsChecked="{Binding Path=MethodData.UseSyncPattern}" Margin="0,5,5,5" Grid.Column="0" Grid.Row="1" />
+		<ToggleButton Content="Asynchronous" IsChecked="{Binding Path=MethodData.UseAsyncPattern}" Margin="5" Grid.Column="1" Grid.Row="1" />
+		<ToggleButton Content="Awaitable" IsChecked="{Binding Path=MethodData.UseAwaitPattern}" Margin="5" Grid.Column="2" Grid.Row="1" />
 	</Grid>
 	<Docs:Standard Grid.Row="6" Margin="0,5,0,0" IsMethod="True" Documentation="{Binding Path=MethodData.Documentation}" />
 	<Grid Grid.Row="7" >
