--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -16,6 +16,7 @@
 				<ResourceDictionary>
 					<Service:ProtectionLevelConverter x:Key="ProtectionLevelConverter" />
 					<Service:SessionModeConverter x:Key="SessionModeConverter" />
+					<Service:ServiceAsynchronyModeConverter x:Key="ServiceAsynchronyModeConverter" />
 					<pc:BoolVisibilityConverter x:Key="BoolVisibilityConverter" />
 
 					<DataTemplate x:Key="{x:Type Projects:Method}" DataType="{x:Type Projects:Method}">
@@ -136,12 +137,14 @@
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
-		<Label Content="Protection Level:" VerticalAlignment="Center" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-		<ComboBox Height="23" Margin="115,5,5,5" SelectedIndex="{Binding Path=ServiceType.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="0" >
-			<ComboBoxItem Content="None" />
-			<ComboBoxItem Content="Sign" />
-			<ComboBoxItem Content="Encrypt and Sign" />
+		<Label Content="Asynchrony Mode:" VerticalAlignment="Center" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+		<ComboBox Height="23" Margin="125,5,5,5" SelectedIndex="{Binding Path=ServiceType.AsynchronyMode, Converter={StaticResource ServiceAsynchronyModeConverter}}" Grid.Column="0" >
+			<ComboBoxItem Content="Default" />
+			<ComboBoxItem Content="Client" />
+			<ComboBoxItem Content="Server" />
+			<ComboBoxItem Content="Both" />
 		</ComboBox>
 		<Label Content="Session Mode:" VerticalAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
 		<ComboBox Height="23" Margin="100,5,5,5" SelectedIndex="{Binding Path=ServiceType.SessionMode, Converter={StaticResource SessionModeConverter}}" Grid.Column="1" >
@@ -149,8 +152,14 @@
 			<ComboBoxItem Content="Required" />
 			<ComboBoxItem Content="Not Allowed" />
 		</ComboBox>
-		<Label Content="Configuration Name:" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-		<pc:TextBox Height="23" Margin="138,5,5,5" Text="{Binding Path=ServiceType.ConfigurationName}" ToolTip="{Binding Path=ServiceType.ConfigurationName}"  Grid.Column="2"/>
+		<Label Content="Protection Level:" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+		<ComboBox Height="23" Margin="115,5,5,5" SelectedIndex="{Binding Path=ServiceType.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="2" >
+			<ComboBoxItem Content="None" />
+			<ComboBoxItem Content="Sign" />
+			<ComboBoxItem Content="Encrypt and Sign" />
+		</ComboBox>
+		<Label Content="Configuration Name:" VerticalAlignment="Center" Grid.Column="3" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+		<pc:TextBox Height="23" Margin="138,5,5,5" Text="{Binding Path=ServiceType.ConfigurationName}" ToolTip="{Binding Path=ServiceType.ConfigurationName}"  Grid.Column="3"/>
 	</Grid>
 	<TabControl Grid.Row="4" Margin="0,10,0,0">
 		<TabItem Header="SERVICE" FontSize="12pt" Padding="5">
