--- a/Designer/Interface/Dialogs/NewItem.xaml
+++ b/Designer/Interface/Dialogs/NewItem.xaml
@@ -204,8 +204,8 @@
 				<Label Content="Name:" Padding="5,0" HorizontalAlignment="Left" VerticalAlignment="Center" />
 			</Grid>
 			<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Margin="5,0">
-				<Button Name="NewItemAdd" Content="Add" Width="75" Margin="0,0,5,0" HorizontalAlignment="Right" IsEnabled="False" Click="NewItemAdd_Click" />
-				<Button Name="NewItemCancel" Content="Cancel" Width="75" HorizontalAlignment="Right" Click="NewItemCancel_Click" />
+				<Button Name="NewItemAdd" Content="ADD" Width="100" FontSize="14pt" Margin="0,0,5,0" HorizontalAlignment="Right" IsEnabled="False" Click="NewItemAdd_Click" />
+				<Button Name="NewItemCancel" Content="CANCEL" Width="100" FontSize="14pt" HorizontalAlignment="Right" Click="NewItemCancel_Click" />
 			</StackPanel>
 		</Grid>
 	</Border>
