--- a/Designer/Interface/Project/Project.xaml
+++ b/Designer/Interface/Project/Project.xaml
@@ -35,11 +35,11 @@
 			<RowDefinition Height="100" />
 		</Grid.RowDefinitions>
 		<Label Content="Project Name:" Height="Auto" HorizontalAlignment="Left" Margin="5,10,0,0" VerticalAlignment="Top" />
-		<TextBox Height="23" Margin="190,11,10,0" Name="ProjectName" Text="{Binding Path=Settings.Name}" VerticalAlignment="Top" />
+		<TextBox Height="23" Margin="140,11,10,0" Name="ProjectName" Text="{Binding Path=Settings.Name}" VerticalAlignment="Top" />
 		<Label Content="Project Namespace:" Height="Auto" HorizontalAlignment="Left" Margin="5,41,0,0" VerticalAlignment="Top" />
-		<TextBox Height="23" Margin="190,42,10,0" Name="txtProjectNamespace" VerticalAlignment="Top" Text="{Binding Path=Settings.Namespace.Name}" />
-		<Label Content="Project Namespace URI:" Height="Auto" HorizontalAlignment="Left" Margin="5,72,0,0" VerticalAlignment="Top" />
-		<TextBox Height="23" Margin="190,73,10,0" Name="txtProjectNamespaceURI" VerticalAlignment="Top" Text="{Binding Path=Settings.Namespace.URI}" />
+		<TextBox Height="23" Margin="140,42,10,0" Name="txtProjectNamespace" VerticalAlignment="Top" Text="{Binding Path=Settings.Namespace.Name, UpdateSourceTrigger=PropertyChanged}" />
+		<Label Content="Project Base URI:" Height="Auto" HorizontalAlignment="Left" Margin="5,72,0,0" VerticalAlignment="Top" />
+		<TextBox Height="23" Margin="140,73,10,0" Name="txtProjectNamespaceURI" VerticalAlignment="Top" Text="{Binding Path=Settings.Namespace.URI, UpdateSourceTrigger=PropertyChanged}" TextChanged="txtProjectNamespaceURI_TextChanged" />
 	</Grid>
 	<GroupBox Name="ProjectGenerationOptionsGroup" Header="Project Generation Options" Margin="5" Grid.Row="1" Grid.ColumnSpan="2">
 		<Grid >
